[project]
name = "VPN"
version = "0.1.0"
description = ""
authors = [
    {name = "Asilanirkes",email = "108576382+Asilanirkes@users.noreply.github.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.8"  # Или ваша версия Python
pynacl = "^1.5.0" # Или последняя версия PyNaCl

[tool.poetry]
# Указываем, где находится наш код
packages = [
  {include = "client"},
  {include = "server"},
  {include = "common"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"